--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,2 +1,6 @@
-$primary-color: hsl(0, 0%, 17%);
-$secondary-color: hsl(0, 0%, 59%);
+$DarkBlue: hsl(209, 23%, 22%); //Dark Mode Elements
+$DarkBlueBackground: hsl(207, 26%, 17%); //Dark Mode Background
+$DarkBlueText: hsl(200, 15%, 8%); //Light Mode Text
+$DarkGray: hsl(0, 0%, 52%); //Light Mode Input
+$LightGray: hsl(0, 0%, 98%); //Light Mode Background
+$White: hsl(0, 0%, 100%); //Dark Mode Text & Light Mode Elements
